RP-813 New report to run specified ECL across all extensions known to the browser, with summary tab